# soong

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILES-CREATED.md  IMPLEMENTATION-SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml
.claude-flow/metrics/: system-metrics.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml
.swarm/: memory.db-shm  memory.db-wal
ansible/: inventory_dynamic.ini  site.yml
ansible/group_vars/: all.yml
cli/: .coverage  pyproject.toml
cli/docs/: green-mirage-audit-report.md
cli/src/gpu_session/: cli.py  config.py  history.py  instance.py  lambda_api.py  models.py  ssh.py
cli/src/soong/: __init__.py  cli.py  config.py  history.py  instance.py  lambda_api.py  mock.py  models.py  pending.py  provision.py  ssh.py  validation.py  worker.py
cli/tests/: conftest.py  test_cli_commands.py  test_cli_configure.py  test_cli_models.py  test_cli_models_add.py  test_cli_models_remove.py  test_cli_start.py  test_cli_status.py  test_cli_tunnel.py  test_cli_wizard.py  test_cloudflare_config.py  test_config.py  test_config_manager_cloudflare.py  test_gpu_recommendation.py  test_heartbeat.py  test_history.py  test_instance.py  test_lambda_api.py  test_model_registry.py  test_models.py  test_pending.py  test_provision.py  test_ssh.py  test_validation.py  test_vram.py  test_worker.py  test_worker_integration.py
cli/tests/helpers/: assertions.py
cloud-init/: user-data.sh
dashboard/: README.md  app.py  requirements.txt
dashboard/templates/: dashboard.html
docs/: index.md  openhands-sdk-api-reference.md
docs/architecture/: cost-controls.md  index.md  system-design.md
docs/contributing/: development-setup.md  index.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  prerequisites.md  quick-start.md
docs/guides/: cost-optimization.md  index.md  launching-instances.md  managing-leases.md  model-management.md  ssh-tunneling.md
docs/reference/: cli-commands.md  configuration-file.md  gpu-types.md  index.md  models.md
latest/: 404.html  index.html  sitemap.xml
latest/architecture/: index.html
latest/contributing/: index.html
latest/getting-started/: index.html
latest/guides/: index.html
latest/javascripts/: extra.js
latest/reference/: index.html
latest/search/: search_index.json
scripts/: capture_screenshots.py  demo-mock.tape  demo-timing.sh  demo.tape  process-demo.sh
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+31 files in other folders)
