[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-session"
version = "0.1.0"
description = "GPU session management for Lambda Labs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
gpu-session = "gpu_session.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_session"]
