[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-session"
version = "0.1.0"
description = "GPU session management for Lambda Labs"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "requests>=2.31.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "questionary>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "responses>=0.25.0,<1.0.0",
]

[project.scripts]
gpu-session = "gpu_session.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_session"]
