[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soong"
version = "0.1.0"
description = "Summon GPU instances for AI agent workflows"
authors = [{name = "Axiomantic", email = "axiomantic@pm.me"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "requests>=2.31.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "questionary>=2.0.0,<3.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/axiomantic/soong"
Repository = "https://github.com/axiomantic/soong"
Documentation = "https://github.com/axiomantic/soong#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "responses>=0.25.0,<1.0.0",
    "time-machine>=2.13.0,<3.0.0",
]

[project.scripts]
soong = "soong.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soong"]
